[fix] changed z-index in nav

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -9,6 +9,7 @@ nav {
     height: 80px;
     background-color: black;
     color: white;
+    z-index: 10;
 }
 
 nav input.nav-button {
